--- a/src/template.ejs
+++ b/src/template.ejs
@@ -4,6 +4,41 @@
     <meta charset="utf-8">
     <title>Achord</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <style>
+        .section-enter {
+            opacity: 0;
+            transform: translate(-200px, 0);
+        }
+
+        .section-enter.section-enter-active {
+            opacity: 1;
+            transform: translate(0, 0);
+            transition: all 150ms cubic-bezier(0.86, 0, 0.07, 1), opacity 175ms cubic-bezier(0.86, 0, 0.07, 1);
+        }
+
+        .section-leave {
+            opacity: 1;
+            transform: translate(0, 0);
+        }
+
+        .section-leave.section-leave-active {
+            opacity: 0;
+            transform: translate(-200px, 0);
+            transition: all 150ms cubic-bezier(0.86, 0, 0.07, 1), opacity 175ms cubic-bezier(0.86, 0, 0.07, 1);
+        }
+
+        .section-appear {
+            opacity: 0;
+            transform: translate(-200px, 0);
+        }
+
+        .section-appear.section-appear-active {
+            opacity: 1;
+            transform: translate(0, 0);
+            transition: all 150ms cubic-bezier(0.86, 0, 0.07, 1), opacity 175ms cubic-bezier(0.86, 0, 0.07, 1);
+        }
+    </style>
 </head>
 
 <body>
