Update tone selection UI

--- a/src/template.ejs
+++ b/src/template.ejs
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
+        .btn {
+            cursor: pointer;
+        }
+
+        .btn:hover,
+        .btn:focus {
+            outline: none !important;
+            text-decoration: none !important;
+        }
+
         .section-enter {
             opacity: 0;
             transform: translate(-200px, 0);
