--- a/src/app.ejs
+++ b/src/app.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Kvothe</title>
     <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 </head>
 
 <body>
