chore(static/seo): add SEO tags + move static folder

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kvothe</title>
+    <meta name="description" content="Kvothe is a composer assistant. It builds modes, scales, chords, intervals, formulas... all that composers need.">
+    <meta name="keywords" content="kvothe, soywod, composition, composer, scale, note, interval, formula, mode, harmonization">
+    <meta name="robots" content="index, follow">
+
+    <title>Kvothe - the composer assistant</title>
+
     <base href="/">
 </head>
 <body>
