feat(seo): update title

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,7 +8,7 @@
     <meta name="keywords" content="kvothe, soywod, composition, composer, scale, note, interval, formula, mode, harmonization">
     <meta name="robots" content="index, follow">
 
-    <title>Kvothe - the composer assistant</title>
+    <title>Kvothe</title>
 
     <base href="/">
 </head>
