--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,11 @@ h1 {
   margin: 30px 0;
 }
 
+h3 {
+  font-weight: 200;
+  margin: 20px 0;
+}
+
 h4 {
   font-weight: 200;
   margin: 5px 0;
@@ -65,4 +70,12 @@ i.icon-right {
   opacity: 1;
   transform: translate(0, 0);
   transition: all 150ms cubic-bezier(0.86, 0, 0.07, 1), opacity 175ms cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.scale-schema {
+  display: flex;
+}
+
+.scale-schema > * {
+  flex: 1;
 }
