--- a/src/styles.css
+++ b/src/styles.css
@@ -8,13 +8,17 @@ h3 {
   margin: 20px 0;
 }
 
-h4 {
+h4, h5 {
   font-weight: 200;
   margin: 5px 0;
 }
 
 h5 {
   font-weight: 200;
+}
+
+.navigation {
+  margin: 30px 0;
 }
 
 i.icon-left {
