--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,16 @@ i.icon-right {
   animation: fade 175ms cubic-bezier(0.86, 0, 0.07, 1), slide 150ms cubic-bezier(0.86, 0, 0.07, 1);
 }
 
+.show {
+  opacity: 1;
+  transition: opacity 175ms cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.hide {
+  opacity: 0;
+  transition: opacity 175ms cubic-bezier(0.86, 0, 0.07, 1);
+}
+
 @keyframes slide {
   0% {
     transform: translate(-200px, 0);
