--- a/src/styles.css
+++ b/src/styles.css
@@ -1,32 +1,5 @@
-h1 {
+h1, h2, h3, h4, h5 {
   font-weight: 200;
-  margin: 30px 0;
-}
-
-h3 {
-  font-weight: 200;
-  margin: 20px 0;
-}
-
-h4, h5 {
-  font-weight: 200;
-  margin: 5px 0;
-}
-
-h5 {
-  font-weight: 200;
-}
-
-.navigation {
-  margin: 30px 0;
-}
-
-i.icon-left {
-  margin: 0 10px 0 0;
-}
-
-i.icon-right {
-  margin: 0 0 0 10px;
 }
 
 *:focus {
