--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,11 +8,12 @@
     <meta name="keywords" content="kvothe, soywod, composition, composer, scale, note, interval, formula, mode, harmonization">
     <meta name="robots" content="index, follow">
 
-    <title>Kvothe</title>
+    <title>The composer assistant | Kvothe</title>
 
     <base href="/">
-</head>
-<body>
-    <div id="kvothe"><%= '<' + "%- (typeof content !== 'undefined') ? content : '' %" + '>' %></div>
-</body>
+  </head>
+
+  <body>
+    <div id="kvothe"></div>
+  </body>
 </html>
